# CyberSecurityTesting101

./: .gitignore  README.md
1.ThinkingLikeAnEngineer/: README.md
2.PasswordSecurity/: README.md  hashcat.md  john.md
2.PasswordSecurity/app/: .gitignore  Cargo.toml  Dockerfile  fake_usernames.csv  notes.md
2.PasswordSecurity/app/src/: main.rs
2.PasswordSecurity/app/templates/: index.html
3.MessagingSecurity/: README.md
3.MessagingSecurity/messages/: message_0.txt  message_1.txt  message_10.txt  message_11.txt  message_12.txt  message_13.txt  message_14.txt  message_15.txt  message_16.txt  message_17.txt  message_18.txt  message_19.txt  message_2.txt  message_20.txt  message_21.txt  message_22.txt  message_23.txt  message_24.txt  message_25.txt  message_26.txt  message_27.txt  message_28.txt  message_29.txt  message_3.txt  message_30.txt  message_31.txt  message_32.txt  message_33.txt  message_34.txt  message_35.txt  message_36.txt  message_37.txt  message_38.txt  message_39.txt  message_4.txt  message_40.txt  message_41.txt  message_42.txt  message_43.txt  message_44.txt  (+20 more)
4.NetworkSecurity/: Dockerfile  README.md  docker-compose.yml
4.NetworkSecurity/bob/: index.html
4.NetworkSecurity/src/: arp_scapy.py  bob_mitm.py
5.DataInputSecurity/: README.md  ping_service.py
6.Fuzzing/: README.md  hextester.cpp  sample.c
6.Fuzzing/testcases/: 02.txt.txt  03.txt.txt
7.VulnerabilityAssessment/: README.md
