[package]
name = "timing-attack-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
rand = "0.9"
argon2 = { version = "0.5", features = ["std"] }
hmac = "0.12"
sha2 = "0.10"
